--- a/app/views/create-account/company-details.html
+++ b/app/views/create-account/company-details.html
@@ -4,7 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="task-list.html" class="govuk-back-link">Back</a>
+<!-- <a href="task-list.html" class="govuk-back-link">Back</a> -->
 
 {% endblock %}
 
