--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -6,35 +6,9 @@
 // Add extra styles here
 
 
-// body {
-//     font-family: "Roboto", arial, sans-serif;
-// }
-
-// .govuk-heading-l  {
-//     font-family: "Roboto", arial, sans-serif;
-// }
-
-// p, .govuk-body, a, .govuk-link {
-//     font-family: "Roboto", arial, sans-serif;
-// }
-
-// .govuk-width-container {
-//     min-width: 1280px;
-//     max-width: 1400px;
-// }
-
-
-// @media only screen and (min-width: 1280px) {
-// .govuk-width-container {
-//     margin-right: 30px;
-//     margin-left: 30px;
-// }
-// }
-
 .moj-header__container {
   max-width: 1280px;
 }
-
 
 .app-destructive-link {
     &.govuk-link {
@@ -45,6 +19,15 @@
       }
 }
 
+.app-resubmit-link {
+  &.govuk-link {
+    color: #942514;
+  }
+  &.govuk-link:focus {
+      color: govuk-colour("black");
+    }
+}
+
 .app-font-colour-red {
     color: govuk-colour("red");
 }
@@ -53,120 +36,24 @@
   background-color: #fff;
 }
 
-// @media (min-width: 40.0625em) {
 
-// .search-container {
-//   display: flex;
-//   align-items: flex-end; /* Aligns items to the end of the container vertically */
-//   gap: 10px; /* Creates space between the input and the button */
-// }
 
-// .search-input {
-//   flex-grow: 1; /* Allows the input to grow and fill available space */
-//   margin-right: 10px; /* Ensures there is space between the input and the button */
-// }
-
-// }
-
-// Records search
-
-.records-search {
-  @include govuk-media-query($from: tablet) {
-    display: flex;
-    justify-content: space-between;
-  }
+.govuk-input--width-50 {
+  max-width: 49.5em;
 }
 
-.records-search .govuk-form-group {
-  flex-grow: 1;
+.govuk-input--width-40 {
+  max-width: 39.5em;
 }
 
-.records-search .govuk-button {
-  @include govuk-media-query($from: tablet) {
-    align-self: flex-start;
-    margin-top: auto;
-    margin-left: govuk-spacing(2);
-  }
+.govuk-input--width-30 {
+  max-width: 29.5em;
 }
 
-///////
-
-// Search button styles from https://components.publishing.service.gov.uk/component-guide/search
-
-$input-size: 40px;
-$large-input-size: 50px;
-
-.gem-c-search__submit {
-  border: 0;
-  cursor: pointer;
-  border-radius: 0;
-  position: relative;
-  padding: 0;
-  width: $input-size;
-  height: $input-size;
-  background-image: url("/public/images/search-button.png");
-  background-repeat: no-repeat;
-  background-position: 2px 50%;
-  text-indent: -5000px;
-  overflow: hidden;
-
-  @include govuk-device-pixel-ratio {
-    background-size: 52.5px auto;
-    background-position: 115% 50%;
-  }
-
-  &:focus {
-    z-index: 2;
-    outline: $govuk-focus-width solid $govuk-focus-colour;
-    // Ensure outline appears outside of the element
-    outline-offset: 0;
-    // Double the border by adding its width again. Use `box-shadow` for this // instead of changing `border-width` - this is for consistency with
-    // Also, `outline` cannot be utilised
-    // here as it is already used for the yellow focus state.
-    box-shadow: inset 0 0 0 $govuk-border-width-form-element * 2 govuk-colour("black");
-  }
-
-  &::-moz-focus-inner {
-    border: 0;
-  }
+.in-review {
+  min-width: 200px;
+  float: left;
+  display: block;
 }
-
-.gem-c-search__item-wrapper {
-  display: table;
-  width: 27%;
-  background: govuk-colour("white");
-}
-
-//general class applied to search input and button wrapper
-.gem-c-search__item {
-  position: relative;
-  display: table-cell;
-  vertical-align: top;
-}
-
-.gem-c-search__submit-wrapper {
-  width: 1%;
-}
-
-.gem-c-search--on-white {
-  .gem-c-search__submit {
-    background-color: govuk-colour("blue");
-    color: govuk-colour("white");
-
-    &:hover {
-      background-color: lighten(govuk-colour("blue"), 5%);
-    }
-  }
-
-  .gem-c-search__input[type="search"] {
-    border-right-width: 0;
-
-    // add the border once focused
-    &:focus {
-      border-right-width: 2px;
-    }
-  }
-}
-
 
 
