--- a/app/views/create-account/court-details.html
+++ b/app/views/create-account/court-details.html
@@ -4,20 +4,23 @@
 
 {% block beforeContent %}
 
-<a href="task-list.html" class="govuk-back-link">Back</a>
+<!-- <a href="task-list.html" class="govuk-back-link">Back</a> -->
 
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-half">
+    <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
-      <form method="post" novalidate action="task-list?cdCompleted=true">
+      <form method="post" novalidate action="task-list-individual?cdCompleted=true">
 
         {{ xGovukAutocomplete({
+          formGroup: {
+            classes: "govuk-input--width-40"
+          },
           id: "ljaCode",
           name: "ljaCode",
           classes: "govuk-!-margin-bottom-8",
@@ -130,6 +133,9 @@
               text: "Prosecutor Court Reference (PCR)",
               classes: "govuk-label--s"
           },
+          hint: {
+            text: 'Enter the prosecutor’s reference number or original account number'
+          },
           classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
           id: "ljaReferenceCode",
           name: "ljaReferenceCode",
@@ -141,9 +147,12 @@
 
 
         {# Size modifiers: xl, l, m #}
-        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"> -->
 
         {{ xGovukAutocomplete({
+          formGroup: {
+            classes: "govuk-input--width-40"
+          },
           id: "enforcementCourt",
           name: "enforcementCourt",
           value: data['enforcementCourt'],
@@ -201,11 +210,24 @@
         }) }}
 
 
-        {{ govukButton({
-          text: "Save and return to tasks"
-        }) }}
+        
+
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Return to account details"
+          }) }}
+
+          {{ govukButton({
+            text: "Add defendant details",
+            classes: "govuk-button--secondary",
+            href: "/personal-details.html"
+          }) }}        
+        </div>
 
       </form>
+
+      <p class="govuk-body"><a class="govuk-link govuk-! govuk-link--no-visited-state" href="task-list-individual.html">Cancel</a></p>
+
 
 
     </div>
