--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,13 +8,9 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <p class="govuk-body"><a href="./create-account/account-details.html" class="govuk-link--no-visited-state">Go to first page of prototype</a></p>
-      <!-- <p class="govuk-body"><a href="./create-account/lja-code.html" class="govuk-link--no-visited-state">LJA code example</a></p> -->
+      <p class="govuk-body"><a href="./create-account/create-account.html" class="govuk-link--no-visited-state">Go to first page of prototype</a></p>
+      <!-- <p class="govuk-body"><a href="./opal-design-system.html" class="govuk-link--no-visited-state">Opal design system</a></p> -->
 
-      <!-- <p><a href="/moj-design-system">MoJ Design System</a></p> -->
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-      <p>Password: gob</p>
 
     </div>
   </div>
