--- a/app/views/create-account/accounts-home.html
+++ b/app/views/create-account/accounts-home.html
@@ -1,12 +1,17 @@
-{% extends "layouts/main.html" %}
+{% extends "layouts/global.html" %}
 
 {% set pageName = "Draft accounts" %}
 
 {% block beforeContent %}
+
+
 <!-- <a href="" class="govuk-back-link"></a> -->
 {% endblock %}
 
 {% block content %}
+
+
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">{{pageName}}</h1>
@@ -31,12 +36,25 @@
 
     <!-- IDEA 1 -->
 
-    <p class="govuk-body"><a href="./checker/in-review.html" class="govuk-link--no-visited-state">Check and approve accounts</a></p>
+    <!-- <p class="govuk-body"><a href="./checker/in-review.html" class="govuk-link--no-visited-state">Check and approve accounts</a></p> -->
+
+    <h2 class="govuk-heading-m">My accounts</h2>
+
+    <!-- {{ govukButton({
+      text: "Create account"
+    }) }} -->
+
     <p class="govuk-body"><a href="./create-account.html" class="govuk-link--no-visited-state">Create account</a></p>
+
+
     <p class="govuk-body"><a href="./inputter/in-review.html" class="govuk-link--no-visited-state">View my submitted accounts</a></p>
 
-    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Other tasks</h3>
-    <p class="govuk-body">If you need to resubmit accounts for other team members, you can <a href="#" class="govuk-link--no-visited-state">view all rejected accounts</a>.</p>
+
+
+
+
+    <h3 class="govuk-heading-m govuk-!-margin-bottom-">Other tasks</h3>
+    <p class="govuk-body">To resubmit accounts for other team members, you can <a href="#" class="govuk-link--no-visited-state">view all rejected accounts</a>.</p>
 
     <!-- IDEA 2 -->
     <!-- <div>
