--- a/app/views/create-account/inputter/in-review.html
+++ b/app/views/create-account/inputter/in-review.html
@@ -13,15 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-      <!-- <h1 class="govuk-heading-l">{{pageName}}</h1>
-      {{ govukButton({
-        text: "Create account"
-      }) }} -->
-
       <h1 class="govuk-heading-l">{{pageName}}</h1>
-
-      
-
 
       <nav class="moj-sub-navigation" aria-label="Sub navigation">
 
@@ -56,12 +48,16 @@
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
       
-            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Defendant</th>
+            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Defendant</th>
 
-            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Date of birth</th>
+            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Date of birth</th>
+            
+            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Created</th>
 
-            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Business unit</th>
-            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Created</th>
+            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Account type</th>
+
+            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Business unit</th>
+
 
       
           </tr>
@@ -74,17 +70,12 @@
             <td class="govuk-table__cell"><a href="#" class="govuk-link govuk-link--no-visited-state">SMITH, Adrian</a></td>
       
             <td class="govuk-table__cell">12 Mar 1994</td>
-
             
-      
+            <td class="govuk-table__cell">Today</td>
+
+            <td class="govuk-table__cell">Fine</td>
+
             <td class="govuk-table__cell">Cambridgeshire</td>
-            <td class="govuk-table__cell">
-              <span class="govuk-visually-hidden">0</span>
-              {{ govukTag({
-                text: "Today"
-              }) }}
-              <!-- <span class="govuk-visually-hidden">0</span>Today -->
-            </td>
 
           </tr>
 
@@ -94,16 +85,12 @@
       
             <td class="govuk-table__cell">4 Sep 1992</td>
       
-            
-      
+            <td class="govuk-table__cell">1 day ago</td>
+
+            <td class="govuk-table__cell">Fine</td>
+
             <td class="govuk-table__cell">Cambridgeshire</td>
 
-            <td class="govuk-table__cell">
-              {{ govukTag({
-                text: "1 day ago"
-              }) }}
-              <!-- 1 day ago -->
-            </td>
 
           </tr>
 
@@ -113,16 +100,11 @@
       
             <td class="govuk-table__cell">5 Dec 1976</td>
       
+            <td class="govuk-table__cell">1 day ago</td>
             
+            <td class="govuk-table__cell">Fine</td>
       
             <td class="govuk-table__cell">Avon and Somerset</td>
-
-            <td class="govuk-table__cell">
-              {{ govukTag({
-                text: "1 day ago"
-              }) }}
-              <!-- 1 day ago -->
-            </td>
 
           </tr>
       
@@ -132,19 +114,12 @@
             <td class="govuk-table__cell"><a href="#" class="govuk-link govuk-link--no-visited-state">BLACKWOOD, Adrian </a></td>
       
             <td class="govuk-table__cell">21 Aug 1984</td>
-      
-            
+
+            <td class="govuk-table__cell">1 day ago</td>
+
+            <td class="govuk-table__cell">Fine</td>
       
             <td class="govuk-table__cell">Avon and Somerset</td>
-
-            <td class="govuk-table__cell">
-              {{ govukTag({
-                text: "4 days ago",
-                classes: "govuk-tag--orange"
-              }) }}
-              <!-- 1 day ago -->
-            </td>
-
 
           </tr>
       
