--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Opal prototypes" %}
+{% set pageName = "Opal prototype" %}
 
 {% block content %}
 
