--- a/app/views/create-account/create-account.html
+++ b/app/views/create-account/create-account.html
@@ -15,7 +15,7 @@
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
       <!-- ?hearingLanguage=welsh-english&documentLanguage=welsh-english -->
-      <form method="post" novalidate action="/account-settings">
+      <form method="post" novalidate action="/create-account-form">
 
         {{ xGovukAutocomplete({
           id: "businessUnit",
@@ -38,8 +38,6 @@
             { text: "Port Talbot" }
           ]
         }) }}
-        
-        
 
 
         <!-- DEFENDANT TYPE CONDITIONALLY REVEALED FORM -->
@@ -48,7 +46,7 @@
         {{ govukRadios({
           name: "defendantTypeF",
           value: data['defendantTypeF'],
-          classes: "govuk-radios--small",
+          classes: "govuk-radios",
           fieldset: {
             legend: {
               text: "Defendant type",
@@ -81,7 +79,7 @@
         {{ govukRadios({
           name: "defendantTypeFP",
           value: data['defendantTypeFP'],
-          classes: "govuk-radios--small",
+          classes: "govuk-radioss",
           fieldset: {
             legend: {
               text: "Defendant type",
@@ -126,15 +124,15 @@
               }
             },
             {
-              value: "Fixed penalty",
-              text: "Fixed penalty",
+              value: "Fixed Penalty",
+              text: "Fixed Penalty",
               conditional: {
                 html: defendantTypeFixedPenalty
               }
             },
             {
-              value: "Conditional caution",
-              text: "Conditional caution"
+              value: "Conditional Caution",
+              text: "Conditional Caution (adult or youth only)"
             }
           ]
         }) }}
@@ -160,12 +158,3 @@
 
 {% endblock %}
 
-<script type="text/javascript">
-  element = document.querySelector('#tt-customDropdownArrow')
-  id = 'autocomplete-customDropdownArrow'
-  accessibleAutocomplete({
-    dropdownArrow: function (config) {
-      return '<svg class="' + config.className + '" style="top: 8px;" viewBox="0 0 512 512" ><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9  c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3  z"/></svg>'
-    }
-  })
-</script>
