--- a/app/views/create-account/personal-details.html
+++ b/app/views/create-account/personal-details.html
@@ -278,7 +278,7 @@
           {{ govukButton({
             text: "Add contact details",
             classes: "govuk-button--secondary",
-            href: "/contact-details.html"
+            href: "./contact-preferences.html"
           }) }}        
         </div>
 
