--- a/app/views/create-account/index.html
+++ b/app/views/create-account/index.html
@@ -1,11 +1,9 @@
-{% extends "layouts/global.html" %}
+{% extends "layouts/main.html" %}
 
 {% set pageName = "Draft accounts" %}
 
 {% block beforeContent %}
 
-
-<!-- <a href="" class="govuk-back-link"></a> -->
 {% endblock %}
 
 {% block content %}
@@ -33,7 +31,6 @@
 
     </div> -->
 
-
     <!-- IDEA 1 -->
 
     <!-- <p class="govuk-body"><a href="./checker/in-review.html" class="govuk-link--no-visited-state">Check and approve accounts</a></p> -->
@@ -46,12 +43,7 @@
 
     <p class="govuk-body"><a href="./create-account.html" class="govuk-link--no-visited-state">Create account</a></p>
 
-
     <p class="govuk-body"><a href="./inputter/in-review.html" class="govuk-link--no-visited-state">View my submitted accounts</a></p>
-
-
-
-
 
     <h3 class="govuk-heading-m govuk-!-margin-bottom-">Other tasks</h3>
     <p class="govuk-body">To resubmit accounts for other team members, you can <a href="#" class="govuk-link--no-visited-state">view all rejected accounts</a>.</p>
