--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,19 +8,17 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <p class="govuk-body" data-module="edge"><a href="#" class="govuk-link--no-visited-state" data-message="This part of the prototype has not been built.">Create fine account</a></p>
+      <p class="govuk-body" data-module="edge"><a href="./create-account/create-account.html" class="govuk-link--no-visited-state" data-message="This part of the prototype has not been built.">Create fine account</a></p>
+      <!-- <p class="govuk-body"><a href="./create-account/index.html" class="govuk-link--no-visited-state">Check and input accounts</a></p> -->
+      
       
       <h2 class="govuk-heading-m">Progress for in-person testing</h2>
       <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/cross-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
+        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
         Start page
       </p>
       <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/cross-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
-        Task list
-      </p>
-      <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/cross-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
+        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
         Court details
       </p>
       <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
