--- a/app/views/layouts/global.html
+++ b/app/views/layouts/global.html
@@ -29,20 +29,11 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
   <div class="govuk-width-container">
     <h2 class="govuk-visually-hidden" id="primary-navigation-heading">Navigation</h2>
     <ul class="x-govuk-primary-navigation__list">
+      <li class="x-govuk-primary-navigation__item ">
+        <a class="x-govuk-primary-navigation__link" aria-current=page href="#">Search</a>
+      </li>
       <li class="x-govuk-primary-navigation__item x-govuk-primary-navigation__item--current">
-        <a class="x-govuk-primary-navigation__link" aria-current=page href="#">Home</a>
-      </li>
-      <li class="x-govuk-primary-navigation__item ">
-        <a class="x-govuk-primary-navigation__link" href="#">Support</a>
-      </li>
-      <li class="x-govuk-primary-navigation__item ">
-        <a class="x-govuk-primary-navigation__link" href="#">Features</a>
-      </li>
-      <li class="x-govuk-primary-navigation__item ">
-        <a class="x-govuk-primary-navigation__link" href="#">Pricing</a>
-      </li>
-      <li class="x-govuk-primary-navigation__item ">
-        <a class="x-govuk-primary-navigation__link" href="#">Contact us</a>
+        <a class="x-govuk-primary-navigation__link" href="#">Draft accounts</a>
       </li>
     </ul>
   </div>
